fix: adjust select info to prevent overflow

--- a/src/components/MultiSelect/MultiSelect.css
+++ b/src/components/MultiSelect/MultiSelect.css
@@ -61,4 +61,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    max-width: 50%;
+    overflow: hidden;
 }
